--- a/base/templates/index_member.html
+++ b/base/templates/index_member.html
@@ -20,7 +20,7 @@
 
                         <div class="col-xs-3 col-sm-3 col-md-3">
                             <!-- This is second coloumn of that row-->
-                            <div class="card" style="width: 220px;">
+                            <div class="card_item" style="width: 220px;">
                                 <img src="/media/{{i.image}}" class="card-img-top" alt="..." height="220px"
                                     width="220px">
                                 <div class="card-body">
