--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -56,7 +56,7 @@
 
         input[type=text],
         input[type=number],
-        #id_club,
+        #id_club,#id_requested_by,#id_item,
         textarea {
             margin-right: 3px;
             border: 1px solid rgb(51, 47, 47);
@@ -78,12 +78,12 @@
             text-decoration: none;
         }
 
-        label{
+        label, .form_label{
             width: 10%;
         }
-        input[type=file]{
+        /* input[type=file]{
             display: none;
-        }
+        } */
 
        
     </style>
