--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -56,7 +56,9 @@
 
         input[type=text],
         input[type=number],
-        #id_club,#id_requested_by,#id_item,
+        input[type=email],
+        input[type=password],
+        #id_club,#id_requested_by,#id_item, #id_designation,
         textarea {
             margin-right: 3px;
             border: 1px solid rgb(51, 47, 47);
