--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -79,6 +79,16 @@
             cursor: pointer;
             text-decoration: none;
         }
+        .button {
+            border: 1px solid rgb(51, 47, 47);
+            background-color: rgb(235, 47, 47);
+            color: white;
+            padding: 10px;
+            font-size: 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
 
         label, .form_label{
             width: 10%;
