--- a/base/templates/main_admin.html
+++ b/base/templates/main_admin.html
@@ -76,6 +76,16 @@
             cursor: pointer;
             text-decoration: none;
         }
+        .button {
+            border: 1px solid rgb(51, 47, 47);
+            background-color: rgb(240, 52, 52);
+            color: white;
+            padding: 10px;
+            font-size: 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
         
         label{
             width: 10%;
@@ -100,7 +110,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'profile' %}">Hi, {{user.first_name}}</a>
+                        <a class="nav-link active" href="#">Hi, {{request.user.first_name}}</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
