Added Password Change functionality

--- a/accounts/templates/main_accounts.html
+++ b/accounts/templates/main_accounts.html
@@ -68,7 +68,10 @@
 			box-shadow: none !important;
 			outline: 0px !important;
 		}
-
+		.errorlist{
+			color: red ;
+			list-style-type: none;
+		}
 		#messages{
 			background-color: grey;
 			color: #fff;
