--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -1,11 +1,11 @@
-<!-- This template acts as a base for all templates -->
-<!doctype html>
+<!-- This template acts as a base for index.html and club_add.html -->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,21 +15,29 @@
 
     <title>{% block title %}{% endblock title %} | InvManage</title>
     <style>
+        .cards {
+            display: flex;
+            /* flex-direction: row; */
+            margin: 1rem;
+            flex-wrap: wrap;
+            align-items: center;
+            /* justify-content: center; */
+            /* max-width: 100%; */
+        }
+
+        .card {
+            background-color: #25274D;
+            color: white;
+        }
+
         body {
             background-color: black;
             font-family: 'Nunito', sans-serif;
             color: white;
         }
 
-        .card_item {
-            background-color: #25274D;
-            color: white;
-        }
-
-        .card {
-            background-color: black;
-        }
-
+        h3,
+        h4,
         a,
         p {
             color: white;
@@ -40,25 +48,15 @@
             color: rgb(180, 175, 175);
         }
 
-        th,
-        td {
+        #id_users {
+            background-color: rgb(29, 27, 27);
             color: white;
-        }
-
-        .table_head {
-            background-color: #25274D !important;
-        }
-
-        .table-striped>tbody>tr:nth-child(odd)>td,
-        .table-striped>tbody>tr:nth-child(odd)>th {
-            background-color: rgb(37, 36, 36);
         }
 
         input[type=text],
         input[type=number],
         input[type=email],
         input[type=password],
-        #id_club,#id_requested_by,#id_item, #id_designation,
         textarea {
             margin-right: 3px;
             border: 1px solid rgb(51, 47, 47);
@@ -66,7 +64,6 @@
             padding: 8px;
             background-color: rgb(29, 27, 27);
             color: white;
-
         }
 
         button {
@@ -81,7 +78,7 @@
         }
         .button {
             border: 1px solid rgb(51, 47, 47);
-            background-color: rgb(235, 47, 47);
+            background-color: rgb(240, 52, 52);
             color: white;
             padding: 10px;
             font-size: 15px;
@@ -89,11 +86,14 @@
             cursor: pointer;
             text-decoration: none;
         }
-
-        label, .form_label{
+        
+        label{
             width: 10%;
         }
-
+        .password_wrapper, .helptext{
+            color:rgb(240, 155, 155);
+            font-size: 80%;
+        }
         .neumorphism-card {
             border-radius: 20px;
             background: linear-gradient(145deg, #101010, #131313);
@@ -101,43 +101,33 @@
                         -12px -12px 24px #151515;
             padding: 20px;
         }
-        /* input[type=file]{
-            display: none;
-        } */
-
-       
     </style>
 </head>
-{% load custom_tags %}
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
+            {% if request.user.info.designation == 'Admin' %}
             <a class="navbar-brand" href="/">InvManage</a>
+            {% elif request.user.info.designation == 'Convenor' %}
+            <a class="navbar-brand" href="{% url 'club_view' club.id %}">InvManage</a>
+            {% else %}
+            <a class="navbar-brand" href="{% url 'index_member' request.user.club_set.first.id %}">InvManage</a>
+            {% endif %}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'profile' request.user.id %}">Hi, {{request.user.first_name}}</a>
+                        <a class="nav-link active" href="#">Hi, {{request.user.first_name}}</a>
                     </li>
-                    {% if request.user.info.designation == 'Convenor' or request.user.info.designation == 'Admin' %}
-
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'club_view' club.id %}">Users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'items_view' club.id %}">Items</a>
-                    </li>
-
-                    {% endif %}
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: rgb(180, 175, 175)" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
@@ -146,23 +136,6 @@
     </div>
     {% endfor %}
     {% endif %}
-
-    <div class="card mx-8 my-4 neumorphism-card"
-    style="width: 50%; margin: auto;">
-        <div class="card-body">
-            <div class="row">
-                <div class="col md-6">
-                    <img src="/media/{{club.logo}}" alt="">
-                </div>
-                <div class="col md-6">
-                    <h4>{{club.club_name}}</h4>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    <button type="submit">Members</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     {% block body %}{% endblock body %}
 
