--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -157,7 +157,7 @@
                 <div class="col md-6">
                     <h4>{{club.club_name}}</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <p>{{club.description|truncatechars:144 }}</p>
                     <button type="submit">Members</button>
                 </div>
             </div>
