--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load custom_tags %}
+{% load can_user_access_tag %}
 {% block title %}Home{% endblock title %}
 
 {% block body %}
