--- a/base/templates/club_view.html
+++ b/base/templates/club_view.html
@@ -16,7 +16,7 @@
         <hr>
     </div>
     <div class="card card-body mx-3">
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered">
             <thead class="table_head">
                 <tr>
                     <th scope="col">Name</th>
