--- a/base/templates/items_view.html
+++ b/base/templates/items_view.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="mx-4 ">
-        <table class="table table-striped" id="items_table" style="width: 100%">
+        <table class="table table-striped table-bordered" id="items_table" style="width: 100%">
             <thead class="table_head">
                 <tr>
                     <th scope="col">Requested By</th>
