--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -5,8 +5,8 @@
 {% block body %}
 
 <div class="container neumorphism-card my-5" >
-    <div style="margin: auto; width: 50%; margin-bottom: 20px; text-align: center;">
-        <h3 style="margin: auto; width: 50%;">Clubs
+    <div class="centered-text">
+        <h3 class="centered-div">Clubs
             {% can_user_access user.id 'club_add' club.id as can_club_add %}
             {% if can_club_add %} 
                 <a id="add-link" href="{% url 'club_add' %}"><i class="fa fa-plus-circle"></i></a>
